fixed project link spacing

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 @media only screen and (max-width: 800px) {
 
-    .project-box-list li {
+    .project-box-list a {
         color: black;
         font-size: 20px;
         /* margin: 30px 0; */
